0007144: 大仕分処理　「担当者」の入力でフル桁入力しないと担当者名が表示されませんが、入力し『Enter』キーを押下した時に７桁でなければ先頭に０を追加して７桁にして名称を検索して下さい。

--- a/src/LargeDist/Views/MainLargeDist.xaml
+++ b/src/LargeDist/Views/MainLargeDist.xaml
@@ -68,8 +68,11 @@
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
                     <Label Content="担当者：" VerticalAlignment="Center"/>
-                    <ComboBox ItemsSource="{Binding PersonList}" SelectedValue="{Binding CurrentPerson}" Width="100" IsEditable="True"
+                    <ComboBox ItemsSource="{Binding PersonList}" SelectedValue="{Binding CurrentPerson}" Text="{Binding PersonCode}" Width="100" IsEditable="True"
                               TextSearch.TextPath="Code" b:ComboBoxBehavior.MaxLength="7" x:Name="Person">
+                        <ComboBox.InputBindings>
+                            <KeyBinding Key="Return" Command="{Binding EnterComboCommand}" />
+                        </ComboBox.InputBindings>
                         <ComboBox.ItemTemplate>
                             <DataTemplate>
                                 <TextBlock><Run Text="{Binding Code}"/><Run Text=" "/><Run Text="{Binding Name}"/></TextBlock>
