0007153: 大仕分処理　【スキャン順設定】に『クリア』ボタンを追加して下さい。一度設定したスキャン順が変更できない為です。

--- a/src/LargeDist/Views/ScanOrderConfig.xaml
+++ b/src/LargeDist/Views/ScanOrderConfig.xaml
@@ -37,6 +37,13 @@
                     </StackPanel>
                 </Button>
 
+                <Button Command="{Binding ClearCommand}">
+                    <StackPanel Orientation="Vertical">
+                        <materialDesign:PackIcon Kind="Clear"/>
+                        <TextBlock Text="クリア"/>
+                    </StackPanel>
+                </Button>
+
                 <Button Command="{Binding BackCommand}">
                     <StackPanel Orientation="Vertical">
                         <materialDesign:PackIcon Kind="ArrowBack"/>
