--- a/src/SeatThreshold/Views/InputSeatThresholdDlg.xaml
+++ b/src/SeatThreshold/Views/InputSeatThresholdDlg.xaml
@@ -141,7 +141,11 @@
                     </Grid.ColumnDefinitions>
 
                     <Label Grid.Column="0" Content="ブロック"/>
-                    <TextBox Grid.Column="1" Text="{Binding CdBlock}" MaxLength="2" IsEnabled="{Binding IsAdd}"/>
+                    <TextBox Grid.Column="1" Text="{Binding CdBlock, UpdateSourceTrigger=PropertyChanged}" MaxLength="2" IsEnabled="{Binding IsAdd}">
+                        <i:Interaction.Behaviors>
+                            <b:NumericTextBoxBehavior/>
+                        </i:Interaction.Behaviors>
+                    </TextBox>
                 </Grid>
 
                 <Grid Grid.Row="3">
