0007161: 座席マッピング　棚割ＭＡＸ数　棚割ＭＡＸ数入力　　キャンセルするとプログラムが落ちる バインドエラー修正

--- a/src/Mapping/Views/DeliveryDateDialog.xaml
+++ b/src/Mapping/Views/DeliveryDateDialog.xaml
@@ -51,7 +51,7 @@
                     </StackPanel>
                 </Button>
 
-                <Button Width="125" Command="{Binding Cancel}" Margin="5" IsCancel="True">
+                <Button Width="125" Command="{Binding CancelCommand}" Margin="5" IsCancel="True">
                     <StackPanel Orientation="Horizontal">
                         <materialDesign:PackIcon Kind="Cancel" VerticalAlignment="Center"/>
                         <TextBlock Text="キャンセル" Margin="3,0,0,0"/>
