--- a/src/DistBlock/Views/InputDistBlockDlg.xaml
+++ b/src/DistBlock/Views/InputDistBlockDlg.xaml
@@ -129,7 +129,7 @@
                         </Grid.ColumnDefinitions>
 
                         <Label Grid.Column="0" Content="拠点コード" VerticalContentAlignment="Center"/>
-                        <TextBox x:Name="CdKyoten" Grid.Column="1" Text="{Binding CdKyoten}" InputMethod.IsInputMethodEnabled="False" IsEnabled="{Binding IsAdd}" MaxLength="4"/>
+                        <TextBox x:Name="CdKyoten" Grid.Column="1" Text="{Binding CdKyoten, UpdateSourceTrigger=PropertyChanged}" InputMethod.IsInputMethodEnabled="False" IsEnabled="{Binding IsAdd}" MaxLength="4"/>
                         <Label Grid.Column="2" Background="Blue"/>
                         <TextBlock Grid.Column="2" Text="{Binding NmKyoten}" Foreground="White"/>
                     </Grid>
