--- a/src/DistGroup/Views/InputDistGroupDlg.xaml
+++ b/src/DistGroup/Views/InputDistGroupDlg.xaml
@@ -91,7 +91,7 @@
                 <ColumnDefinition Width="1*"/>
             </Grid.ColumnDefinitions>
 
-            <Grid Grid.Column="0">               
+            <Grid Grid.Column="0">
 
                 <Grid.RowDefinitions>
                     <RowDefinition Height="4*"/>
@@ -144,8 +144,8 @@
                         </Grid.ColumnDefinitions>
 
                         <Label Grid.Column="0" Content="仕分グループコード"/>
-                        <TextBox Grid.Column="1" Text="{Binding CdDistGroup}" MaxLength="5" IsEnabled="{Binding IsAdd}"/>
-                        <TextBox Grid.Column="2" Text="{Binding NmDistGroup}" MaxLength="40" IsEnabled="{Binding IsAdd}"/>
+                        <TextBox Grid.Column="1" Text="{Binding CdDistGroup, UpdateSourceTrigger=PropertyChanged}" MaxLength="5" IsEnabled="{Binding IsAdd}"/>
+                        <TextBox Grid.Column="2" Text="{Binding NmDistGroup, UpdateSourceTrigger=PropertyChanged}" MaxLength="40" IsEnabled="{Binding IsAdd}"/>
                     </Grid>
 
                     <Grid Grid.Row="3">
@@ -371,7 +371,7 @@
                         <RowDefinition Height="0.7*"/>
                         <RowDefinition Height="9.3*"/>
                     </Grid.RowDefinitions>
-                    
+
                     <Label Grid.Column="0" Content="【コース順】" Margin="30,0,0,0" VerticalAlignment="Bottom" />
 
                     <Grid Grid.Row="1">
@@ -398,7 +398,7 @@
                             <DataGrid.Columns>
                                 <DataGridTextColumn Header="順番" Binding="{Binding NuCourseSeq}" Width="1*" IsReadOnly="True"
                                                     ElementStyle="{StaticResource RightTextElement}"/>
-                                <DataGridTextColumn Header="コース" Binding="{Binding CdCourse}" Width="1*"
+                                <DataGridTextColumn Header="コース" Binding="{Binding CdCourse, UpdateSourceTrigger=PropertyChanged}" Width="1*"
                                                     ElementStyle="{StaticResource CenterTextElement}">
                                     <DataGridTextColumn.EditingElementStyle>
                                         <Style TargetType="TextBox">
