--- a/src/Mapping/Views/LocInfo.xaml
+++ b/src/Mapping/Views/LocInfo.xaml
@@ -70,6 +70,7 @@
         <DataGrid Margin="3" DockPanel.Dock="Left" 
                       Name="gridlocinfo" ItemsSource="{Binding LocInfos, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"                          
                       AutoGenerateColumns="False"
+                      CanUserSortColumns="false"
                       IsReadOnly="True" VerticalScrollBarVisibility="Auto" IsSynchronizedWithCurrentItem="True"
                       SelectionUnit="FullRow" FrozenColumnCount="0" GridLinesVisibility="None">
 
