集約得意先登録:ID=7163 子得意先名取得失敗時、行編集を完了しない

--- a/src/Customer/Views/InputCustomer.xaml
+++ b/src/Customer/Views/InputCustomer.xaml
@@ -213,7 +213,8 @@
                         <DataGrid x:Name="dataGrid" ItemsSource="{Binding ChildCustomers}" AutoGenerateColumns="False"
                                   VerticalScrollBarVisibility="Auto" IsSynchronizedWithCurrentItem="True"
                                   SelectionUnit="FullRow" FrozenColumnCount="0" GridLinesVisibility="All" CanUserAddRows="True"
-                                  Style="{StaticResource MaterialDesignDataGrid}" Margin="3" FontSize="18">
+                                  Style="{StaticResource MaterialDesignDataGrid}" Margin="3" FontSize="18"
+                                  RowEditEnding="dataGrid_RowEditEnding">
                             <DataGrid.ColumnHeaderStyle>
                                 <Style TargetType="DataGridColumnHeader">
                                     <Setter Property="Background" Value="LightGray"/>
