--- a/src/TakahataDistListPrint/Views/MainTakahataDistListPrint.xaml
+++ b/src/TakahataDistListPrint/Views/MainTakahataDistListPrint.xaml
@@ -35,9 +35,9 @@
                         </Style>
                     </ToolBar.Resources>
 
-                    <Button Command="{Binding Search}">
+                    <Button Command="{Binding Search}" CommandParameter="{Binding ElementName=dataGrid}">
                         <StackPanel Orientation="Vertical">
-                            <materialDesign:PackIcon Kind="Search"/>
+                            <materialDesign:PackIcon Kind="{Binding SearchIcon}"/>
                             <TextBlock Text="検索"/>
                         </StackPanel>
                     </Button>
@@ -85,30 +85,30 @@
                   SelectionUnit="FullRow" FrozenColumnCount="0" GridLinesVisibility="None">
 
             <DataGrid.Columns>
-                <DataGridTextColumn Header="出荷バッチコード" Binding="{Binding CdShukkaBatch}"/>
+                <DataGridTextColumn Header="出荷バッチ" Binding="{Binding CdShukkaBatch}"/>
                 <DataGridTextColumn Header="コース" Binding="{Binding CdCourse}"/>
                 <DataGridTextColumn Header="配送順" Binding="{Binding CdRoute}" ElementStyle="{StaticResource RightTextElement}"/>
                 <DataGridTextColumn Header="得意先コード" Binding="{Binding CdTokuisaki}"/>
                 <DataGridTextColumn Header="得意先名" Binding="{Binding NmTokuisaki}"/>
                 <DataGridTextColumn Header="品番" Binding="{Binding CdHimban}"/>
-                <DataGridTextColumn Header="JANコード" Binding="{Binding CdJan}"/>
+                <DataGridTextColumn Header="JANコード" Binding="{Binding CdGtin13}"/>
                 <DataGridTextColumn Header="品名" Binding="{Binding NmHinSeishikimei}"/>
-                <DataGridTextColumn Header="入数" Binding="{Binding QtSet}" ElementStyle="{StaticResource RightTextElement}"/>
+                <DataGridTextColumn Header="入数" Binding="{Binding NuBoxunit}" ElementStyle="{StaticResource RightTextElement}"/>
 
-                <DataGridTextColumn Header="予定数&#xa;箱" Binding="{Binding Obox}" HeaderStyle="{StaticResource DoubleRowHeader}"
+                <DataGridTextColumn Header="予定数&#xa;箱" Binding="{Binding BoxOps}" HeaderStyle="{StaticResource DoubleRowHeader}"
                     ElementStyle="{StaticResource RightTextElement}"/>
-                <DataGridTextColumn Header="&#xa;バラ" Binding="{Binding OBara}" ElementStyle="{StaticResource RightTextElement}"/>
-                <DataGridTextColumn Header="&#xa;総個数" Binding="{Binding TotalOps}" ElementStyle="{StaticResource RightTextElement}"/>
+                <DataGridTextColumn Header="&#xa;バラ" Binding="{Binding BaraOps}" ElementStyle="{StaticResource RightTextElement}"/>
+                <DataGridTextColumn Header="&#xa;総個数" Binding="{Binding NuOps}" ElementStyle="{StaticResource RightTextElement}"/>
 
-                <DataGridTextColumn Header="仕分残数&#xa;箱" Binding="{Binding RemainingBox}" HeaderStyle="{StaticResource DoubleRowHeader}"
+                <DataGridTextColumn Header="仕分残数&#xa;箱" Binding="{Binding BoxRemainingPs}" HeaderStyle="{StaticResource DoubleRowHeader}"
                     ElementStyle="{StaticResource RightTextElement}"/>
-                <DataGridTextColumn Header="&#xa;バラ" Binding="{Binding RemainingBara}" ElementStyle="{StaticResource RightTextElement}"/>
-                <DataGridTextColumn Header="&#xa;総個数" Binding="{Binding TotalRemainingps}" ElementStyle="{StaticResource RightTextElement}"/>
+                <DataGridTextColumn Header="&#xa;バラ" Binding="{Binding BaraRemainingPs}" ElementStyle="{StaticResource RightTextElement}"/>
+                <DataGridTextColumn Header="&#xa;総個数" Binding="{Binding TotalRemainingPs}" ElementStyle="{StaticResource RightTextElement}"/>
 
-                <DataGridTextColumn Header="仕分済&#xa;箱" Binding="{Binding Rbox}" HeaderStyle="{StaticResource DoubleRowHeader}"
+                <DataGridTextColumn Header="仕分済&#xa;箱" Binding="{Binding BoxRps}" HeaderStyle="{StaticResource DoubleRowHeader}"
                     ElementStyle="{StaticResource RightTextElement}"/>
-                <DataGridTextColumn Header="&#xa;バラ" Binding="{Binding RBara}" ElementStyle="{StaticResource RightTextElement}"/>
-                <DataGridTextColumn Header="&#xa;総個数" Binding="{Binding TotalRps}" ElementStyle="{StaticResource RightTextElement}"/>
+                <DataGridTextColumn Header="&#xa;バラ" Binding="{Binding BaraRps}" ElementStyle="{StaticResource RightTextElement}"/>
+                <DataGridTextColumn Header="&#xa;総個数" Binding="{Binding NuDrps}" ElementStyle="{StaticResource RightTextElement}"/>
             </DataGrid.Columns>
         </DataGrid>
     </DockPanel>
