--- a/src/DistProg/Views/MainDistProg.xaml
+++ b/src/DistProg/Views/MainDistProg.xaml
@@ -79,7 +79,7 @@
                       SelectionUnit="FullRow" FrozenColumnCount="0">
 
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="エリア" Binding="{Binding Tdunitareacode}" ElementStyle="{StaticResource CenterTextElement}"/>
+                    <DataGridTextColumn Header="エリア" Binding="{Binding IdPc}" ElementStyle="{StaticResource CenterTextElement}"/>
                     <DataGridTextColumn Header="ブロック" Binding="{Binding CdBlock}" ElementStyle="{StaticResource CenterTextElement}"/>
                     <DataGridTextColumn Header="担当者" Binding="{Binding NmShain}"/>
                     <DataGridTextColumn Header="仕分グループ" Binding="{Binding DistGroupInfo}"/>
@@ -94,8 +94,8 @@
                     <DataGridTextColumn Header="&#xa;予定" Binding="{Binding NuOitemcnt}" ElementStyle="{StaticResource CenterTextElement}"/>
 
                     <DataGridTextColumn Header="仕分個数&#xa;済" Binding="{Binding NuRps}" HeaderStyle="{StaticResource DoubleRowHeader}"
-                                        ElementStyle="{StaticResource RightTextElement}"/>
-                    <DataGridTextColumn Header="&#xa;予定" Binding="{Binding NuOps}" ElementStyle="{StaticResource RightTextElement}"/>
+                                        ElementStyle="{StaticResource CenterTextElement}"/>
+                    <DataGridTextColumn Header="&#xa;予定" Binding="{Binding NuOps}" ElementStyle="{StaticResource CenterTextElement}"/>
 
                     <DataGridTemplateColumn Header="個数進捗率" Width="*">
                         <DataGridTemplateColumn.CellTemplate>
