--- a/src/DistProg/Views/MainDistProg.xaml
+++ b/src/DistProg/Views/MainDistProg.xaml
@@ -4,7 +4,12 @@
              xmlns:prism="http://prismlibrary.com/"
              prism:ViewModelLocator.AutoWireViewModel="True"
              xmlns:controls="clr-namespace:WindowLib.Views;assembly=WindowLib"
-             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes">
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             Loaded="UserControl_Loaded">
+    <UserControl.InputBindings>
+        <KeyBinding Key="F6" Command="{Binding ShowDistUncompleted}"/>
+        <KeyBinding Key="F7" Command="{Binding ShowDistCompleted}"/>
+    </UserControl.InputBindings>
 
     <DockPanel>
         <Grid DockPanel.Dock="Top">
